tests/expectations/compiler/records/external_record_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'transition'
    --> compiler-test:3:5
     |
   3 |     transition main(r: R) { 
     |     ^^^^^^^^^^
